[tool.poetry]
name = "boost-histogram-test"
version = "0.1.0"
description = "A package for performing statistical comparisons and tests of boost histograms!"
authors = ["Rodrigo G. Ruiz"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
